# tutor-ka-locale

./: README.md  pyproject.toml
tutor_ka_locale/: plugin.py
