[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-ka-locale"
version = "0.1.0"
dependencies = ["tutor>=20.0.0,<22.0.0"]

[tool.setuptools.packages.find]
include = ["tutor_ka_locale*"]

[project.entry-points."tutor.plugin.v1"]
ka_locale = "tutor_ka_locale.plugin"
